--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.3.6",
+    "date-fns": "^4.1.0",
+    "nuqs": "^2.7.2",
     "ogl": "^1.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
